...
        child: Stack(
          alignment: Alignment.center,
          children: <Widget>[
            Align(
              alignment: Alignment.centerLeft,
              child: NeumorphicIconButton(
                key: const Key('btn-setup-close'),
                icon: Icons.close_rounded,
                semanticLabel: closeLabel,
                onTap: onClose,
              ),
            ),
            Text(
...
